[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebulento"
version = "0.1.1a1"
description = "dead simple fuzzy matching intent parser"
readme = "README.md"
license = { text = "apache-2.0" }
authors = [
    { name = "jarbasai", email = "jarbasai@mailfence.com" }
]
requires-python = ">=3.8"
dependencies = [
    "rapidfuzz",
    "quebra_frases",
]

[project.urls]
Homepage = "https://github.com/OpenJarbas/nebulento"

[project.entry-points."opm.pipeline"]
"ovos-nebulento-pipeline-plugin" = "nebulento.opm:NebulentoPipeline"

[tool.hatch.build.targets.wheel]
packages = ["nebulento"]
